infrastructure/kubernetes/home-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-node-port-service
spec:
  type: NodePort
  selector:
    app: home
  ports:
    - name: home
      protocol: TCP
      port: 3000
      targetPort: 3000
