infrastructure/kubernetes/ingress-nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /(home-api|home|homes|room|rooms).*
            pathType: Prefix
            backend:
              service:
                name: home-clusterip-service
                port:
                  number: 3000
